# python-package-exercise-project-3-team-12

./: Pipfile  README.md  example.json  pyproject.toml
.github/workflows/: build.yaml
app/: routes.py
app/templates/: index.html
src/: example_game.py
src/examplepackageTeam12_p3/: __main__.py  guess_game.py  imported_file.txt  wisdom.py
src/examplepackageTeam12p3/: __main__.py  guess_game.py
tests/: test_game.py
