[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "examplepackageTeam12p3"
description = "An example of a package developed with pyenv, built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
version = "0.0.7"
authors = [
  { name="temp", email="temp@temp" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-12"
"Repository" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-12.git"
"Bug Tracker" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-12/issues"

[project.scripts]
guess_game = "guess_game.__main__:main"
